<resources>
    <string name="app_name">SiTschedule</string>

    <string name="title_section1">Daily Schedule</string>
    <string name="title_section2">App Settings</string>
    <string name="title_section3">Manage Schedules</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open nav</string>
    <string name="navigation_drawer_close">Close nav</string>

    <string name="placeholder">Placeholder</string>

    <string name="icon_ellipsis_v">&#xf142;</string>
    <string name="icon_delete">&#xf014;</string>
    <string name="icon_upload">&#xf093;</string>
    <string name="icon_download">&#xf019;</string>
    <string name="icon_rename">&#xf044;</string>
    <string name="icon_refresh">&#xf021;</string>
    <string name="icon_warning">&#xf071;</string>
    <string name="icon_link">&#xf0c1;</string>

    <string name="settings_push_header">Pop-up reminder</string>
    <string name="settings_reminder_time_header">Default reminder time</string>
    <string name="settings_reminder_sound">Sound</string>
    <string name="settings_reminder_vibrate">Vibrate</string>
</resources>
